# mcp-project

./: LICENSE  README.md  pyproject.toml  tally_o.py
Discord-Bot/: PRODUCTION_README.md  README.md  new.py  pyproject.toml  stage_organized.py
Tally/: README.md  TALLY_KODEUS_INTERN.docx  config.json  metadata.json  pyproject.toml  tally_o.py
notion/: .env  .env.example  .gitignore  Notion_MCP_Server_Report.docx  README.md  config.json  metadata.json  new.py  project_report.docx  pyproject.toml
